Add events to bind CountdownComponent with parent
Defining @Output properties (of type EventEmitter) in the CountdownComponent 
communication with the parent element is possible 
update of values in the regressive count are sent this way

--- a/learn-angular-components1/src/app/app.component.html
+++ b/learn-angular-components1/src/app/app.component.html
@@ -1,4 +1,10 @@
 <div>
-  <app-progress-bar progress="30"></app-progress-bar>
-  <app-countdown init="15"></app-countdown>
+  <app-progress-bar 
+    [progress]="porcentualCounterProgress">
+  </app-progress-bar>
+  <app-countdown
+    [init]="totalCountdown"
+    (onDecrease)="updateProgress($event)"
+    (onComplete)="countdownFinished()">
+  </app-countdown>
 </div>
