Use Template Reference Variable to reset countdown
Angular offers "Template Ref. Vars." through # symbol 
to allow components refer to sibling components
I'll use a Templ.Ref.Var to create a button that restarts another component (the countdown)

--- a/learn-angular-components1/src/app/app.component.html
+++ b/learn-angular-components1/src/app/app.component.html
@@ -2,9 +2,14 @@
   <app-progress-bar 
     [progress]="porcentualCounterProgress">
   </app-progress-bar>
-  <app-countdown
+  <app-countdown #countdownReference
     [init]="totalCountdown"
     (onDecrease)="updateProgress($event)"
     (onComplete)="countdownFinished()">
   </app-countdown>
+  <button
+    (click)="countdownReference.startCountdown(); porcentualCounterProgress=0;"
+  >
+    RESTART
+  </button>
 </div>
