--- a/learn-angular-components2/src/app/timer/timer.component.html
+++ b/learn-angular-components2/src/app/timer/timer.component.html
@@ -3,5 +3,10 @@
 
   <app-display [time]="countdown"></app-display>
 
-  <button (click)="startCountdown()">RESTART</button>
+  <div class="buttons">
+    <button *ngIf="paused" (click)="toggleCountdown()">Play</button>
+    <button *ngIf="!paused" (click)="toggleCountdown()">Pause</button>
+    <button (click)="restartCountdown()">RESTART</button>
+  </div>
+
 </div>
