--- a/learn-angular-components2/src/app/timer/timer.component.html
+++ b/learn-angular-components2/src/app/timer/timer.component.html
@@ -1,12 +1,12 @@
 <div class="timer">
-  <app-progress-bar [progress]="(init-countdown)/init*100"></app-progress-bar>
+  <app-progress-bar [progress]="(init-timerService.countdown)/init*100"></app-progress-bar>
 
-  <app-display [time]="countdown"></app-display>
+  <app-display [time]="timerService.countdown"></app-display>
 
   <div class="buttons">
-    <button *ngIf="paused" (click)="toggleCountdown()">Play</button>
-    <button *ngIf="!paused" (click)="toggleCountdown()">Pause</button>
-    <button (click)="restartCountdown()">RESTART</button>
+    <button *ngIf="timerService.paused" (click)="timerService.toggleCountdown()">Play</button>
+    <button *ngIf="!timerService.paused" (click)="timerService.toggleCountdown()">Pause</button>
+    <button (click)="timerService.restartCountdown()">RESTART</button>
   </div>
 
 </div>
