--- a/learn-angular-components2/src/app/app.component.html
+++ b/learn-angular-components2/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
   <h1>Timers</h1>
-  <app-timer init="65"></app-timer>
+  <app-timer init="3" (onComplete)="logCountdownEnd()" ></app-timer>
 </div>
