--- a/learn-angular-components2/src/app/timer/timer.component.html
+++ b/learn-angular-components2/src/app/timer/timer.component.html
@@ -1,7 +1,7 @@
 <div class="timer">
-  <app-progress-bar [progress]="(init-timerService.countdown)/init*100"></app-progress-bar>
+  <app-progress-bar [progress]="(init-(timerService.countdown$ | async))/init*100"></app-progress-bar>
 
-  <app-display [time]="timerService.countdown"></app-display>
+  <app-display [time]="timerService.countdown$ | async"></app-display>
 
   <div class="buttons">
     <button *ngIf="timerService.paused" (click)="timerService.toggleCountdown()">Play</button>
