Write `getter` so no logic in the html template
Good practices in Angular advise against having calculations in the html template, 
use instead `getters`in the component.

--- a/learn-angular-components2/src/app/timer/timer.component.html
+++ b/learn-angular-components2/src/app/timer/timer.component.html
@@ -1,5 +1,5 @@
 <div class="timer">
-  <app-progress-bar [progress]="(init-(timerService.countdown$ | async))/init*100"></app-progress-bar>
+  <app-progress-bar [progress]="progress"></app-progress-bar>
 
   <app-display [time]="timerService.countdown$ | async"></app-display>
 
