Change to OnPush change detection strategy ⚠️⚠️ in Timer
⚠️⚠️ This is an important concept: dirty checking, change detection strategies.

--- a/learn-angular-components2/src/app/app.component.html
+++ b/learn-angular-components2/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>
   <h1>Timers</h1>
   <app-timer init="3" (onComplete)="logCountdownEnd()" ></app-timer>
+  <app-timer init="65" (onComplete)="logCountdownEnd()" ></app-timer>
+  <app-timer init="5" (onComplete)="logCountdownEnd()" ></app-timer>
 </div>
